--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "document": "documentjs",
     "build": "node build"
   },
-  "main": "place-my-order/index.stache!done-autorender",
+  "main": "production.html",
   "files": [
     "src"
   ],
@@ -28,9 +28,15 @@
     },
     "configDependencies": [
       "live-reload"
-    ]
+    ],
+    "envs": {
+      "server-production": {
+        "baseURL": "https://pmo-hurgleburgler.firebaseapp.com/"
+      }
+    }
   },
   "dependencies": {
+    "bit-tabs": "^0.2.0",
     "can": "^2.3.16",
     "can-connect": "^0.3.4",
     "can-ssr": "^0.11.6",
@@ -41,16 +47,46 @@
     "jquery": "~2.2.1",
     "place-my-order-api": "^0.4.4",
     "place-my-order-assets": "^0.1.7",
-    "steal": "^0.14.0"
+    "steal": "^0.14.0",
+    "steal-platform": "0.0.4",
+    "steal-socket.io": "^1.0.1"
   },
   "devDependencies": {
+    "can-fixture": "^0.1.2",
     "documentjs": "^0.4.2",
+    "donejs-cli": "^0.7.0",
     "donejs-deploy": "^0.4.0",
     "funcunit": "~3.0.0",
+    "steal-cordova": "^0.1.3",
+    "steal-nw": "^0.1.4",
     "steal-qunit": "^0.1.1",
     "steal-tools": "^0.14.0",
-    "testee": "^0.2.4",
-    "donejs-cli": "^0.7.0",
-    "can-fixture": "^0.1.2"
+    "testee": "^0.2.4"
+  },
+  "window": {
+    "width": 1000,
+    "height": 600,
+    "toolbar": false
+  },
+  "donejs": {
+    "deploy": {
+      "root": "dist",
+      "services": {
+        "production": {
+          "type": "firebase",
+          "config": {
+            "firebase": "pmo-hurgleburgler",
+            "public": "./dist",
+            "headers": [{
+              "source": "/**",
+              "headers": [{
+                "key": "Access-Control-Allow-Origin",
+                "value": "*"
+              }]
+            }]
+          }
+        }
+      }
+    }
   }
 }
